# aic

./: .gitignore  README.md  generate_configs.py  pixi.toml
aic_assets/: package.xml
aic_lerobot_policy/: package.xml  setup.cfg  setup.py
aic_lerobot_policy/aic_lerobot_policy/: LeRobotPolicy.py
custom_policies/expert_twist/: package.xml  pixi.toml  setup.cfg  setup.py
custom_policies/expert_twist/expert_twist/: ExpertTwist.py
docker/: docker-compose.yaml
docs/: aic_controller.md  aic_interfaces.md  challenge_rules.md  cheat_code_test_setups.md  getting_started.md  hpc_singularity_setup.md  qualification_phase.md  troubleshooting.md
ground_truth_collection/: README.md  c1.yaml  c2.yaml  c3.yaml  generate_scenarios.py  pose_commands.out  record_trials.py  record_trials_v2.py  record_trials_v2_parallel.py  record_trials_v2_simrestart.py  smoke.yaml
scenarios/: manifest.json  run_all.sh  scenario_000.args  scenario_001.args  scenario_002.args  scenario_003.args  scenario_004.args  scenario_005.args  scenario_006.args  scenario_007.args  scenario_008.args  scenario_009.args  scenario_010.args  scenario_011.args  scenario_012.args  scenario_013.args  scenario_014.args  scenario_015.args  scenario_016.args  scenario_017.args  scenario_018.args  scenario_019.args  scenario_020.args  scenario_021.args  scenario_022.args  scenario_023.args  scenario_024.args  scenario_025.args  scenario_026.args  scenario_027.args  scenario_028.args  scenario_029.args  scenario_030.args  scenario_031.args  scenario_032.args  scenario_033.args  scenario_034.args  scenario_035.args  scenario_036.args  scenario_037.args  (+212 more)
training/: CONFIG_DISTRIBUTION.md  (+1 more)
(+33 files in other folders)
